# dlwl

./: .gitignore  CLAUDE.md  algorithms.py  changelog.md  debug.md  debug_request_data.json  eval.py  fit_model.py  main_train.py  main_train_2step.py  optimize.py  physical_model.py  pyproject.toml  python_service.md  test_custom_pattern.py  test_splitter.py  test_splitter_v2.py
dlwl-legacy/: document.md  pyproject.toml
dlwl-legacy/data/: psf.pt
dlwl-legacy/data/fabrication_calib/gt_fit_files/: 1018_dwl_20um.mat  1018_dwl_5um.mat  1018_ml3_5um.mat  1021_ml3_120um.mat  1021_ml3_20um.mat  1021_ml3_40um.mat  1021_ml3_5um.mat  1022_dwl_40.mat  1028_dwl_50.mat  1029_dwl_50_10mm.mat  1030_dwl_30_n20_N2.mat  1030_dwl_30_n20_N3.mat  1030_dwl_55_n10_N4.mat  1031_ml3_149.5_N2_2.mat  1031_ml3_149.5_N4.mat  1102_dwl_n10.mat  1104_ml3_2u_high_138.mat  (+1 more)
dlwl-legacy/docs/: SFR_theory.md  changelog.md  supp.md  v3_requirements.md
dlwl-legacy/doe_optimizer/api/: __init__.py  request.py  schemas.py
dlwl-legacy/doe_optimizer/core/: __init__.py  propagation.py  propagator_factory.py
dlwl-legacy/doe_optimizer/evaluation/: __init__.py  evaluator.py
dlwl-legacy/doe_optimizer/params/: __init__.py  base.py  fft_params.py  optimization.py  sfr_params.py
dlwl-legacy/doe_optimizer/pipeline/: __init__.py
dlwl-legacy/doe_optimizer/utils/: __init__.py  image_utils.py  math_utils.py  visualization.py
dlwl-legacy/doe_optimizer/validation/: validator.py
dlwl-legacy/doe_optimizer/visualization/: data.py
dlwl-legacy/doe_optimizer/wizard/: __init__.py  base.py  diffuser.py  lens.py
dlwl-legacy/web_frontend/: requirements.txt
dlwl-legacy/web_frontend/backend/: __init__.py
dlwl-legacy/web_frontend/frontend/: index.html
(+240 files in other folders)
